--- a/src/app/p-rain/p-rain.component.html
+++ b/src/app/p-rain/p-rain.component.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="form-check">
-        <input id="CustomColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomColor(); toggleCustomColorInputs()" checked>
+        <input id="CustomColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomColor(false)" checked>
         <label class="form-check-label" for="CustomColorRadio">
           <span class="bi bi-info-circle" placement="right" ngbTooltip="Select this option for each particle to be colored white."></span>
           Custom Color
@@ -66,44 +66,51 @@
               <div>  
                 <label class="col-form-label" for="RedInput">R:</label>
                 <input id="RedInput" type="Number" class="form-control-sm" min="0" max="255"
-                  (change)="selectCustomColor()" value="{{customColorObj.red}}" #RedInput>
+                  (change)="selectCustomColor(false)" value="{{customColorObj.red}}" #RedInput>
               </div>
         
               <!-- Green Input -->
               <div> 
                 <label class="col-form-label" for="GreenInput">G:</label>
                 <input id="GreenInput" type="Number" class="form-control-sm" min="0" max="255"
-                  (change)="selectCustomColor()" value="{{customColorObj.green}}" #GreenInput>
+                  (change)="selectCustomColor(false)" value="{{customColorObj.green}}" #GreenInput>
               </div>
         
               <!-- Blue Input -->
               <div> 
                 <label class="col-form-label" for="BlueInput">B:</label>
                 <input id="BlueInput" type="Number" class="form-control-sm" min="0" max="255"
-                  (change)="selectCustomColor()" value="{{customColorObj.blue}}" #BlueInput>
+                  (change)="selectCustomColor(false)" value="{{customColorObj.blue}}" #BlueInput>
               </div>
 
             </td>
-            <td>
+            <td class="pl-2">
 
               <div class="form-check">
-                <input id="MappedColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomMappedColors()">
+                <input id="MappedColorRadio" class="form-check-input" name="ColorPresetRadioGroup" type="radio" (change)="selectCustomColor(true, 'black')">
                 <label class="form-check-label" for="MappedColorRadio">
                   Black
                 </label>
               </div>
 
               <div class="form-check">
-                <input id="MappedColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomMappedColors()">
+                <input id="MappedColorRadio" class="form-check-input" name="ColorPresetRadioGroup" type="radio" (change)="selectCustomColor(true, 'purple')">
                 <label class="form-check-label" for="MappedColorRadio">
-                  Yellow
+                  Purple
                 </label>
               </div>
 
               <div class="form-check">
-                <input id="MappedColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomMappedColors()">
+                <input id="MappedColorRadio" class="form-check-input" name="ColorPresetRadioGroup" type="radio" (change)="selectCustomColor(true, 'white')">
                 <label class="form-check-label" for="MappedColorRadio">
                   White
+                </label>
+              </div>
+
+              <div class="form-check">
+                <input id="MappedColorRadio" class="form-check-input" name="ColorPresetRadioGroup" type="radio" (change)="selectCustomColor(true, 'yellow')">
+                <label class="form-check-label" for="MappedColorRadio">
+                  Yellow
                 </label>
               </div>
 
