Moved fonts to service. Added sidebar and an x-offset for drawing.

--- a/src/app/p-text/p-text.component.html
+++ b/src/app/p-text/p-text.component.html
@@ -1,1 +1,11 @@
+<div id="SideBar" class="bg-info text-white col-2">
+  <form>
+
+    <div class="form-group">
+
+    </div>
+
+  </form>
+</div>
+
 <canvas id="Canvas" [ngClass]="canvasClass" #Canvas></canvas>
