Fixed the OnDestroy mouseListener removal. Added some planning comments

--- a/src/app/p-text/p-text.component.html
+++ b/src/app/p-text/p-text.component.html
@@ -14,6 +14,24 @@
         </select>
       </div>
 
+      <!--
+        color: string;
+        font: string;
+        text: string;
+        x: number;
+        y: number;
+        mapX: number;
+        mapY: number;
+        name: string;
+        width: number;
+        height: number;
+        scale: number;
+        resultOffsetX: number;
+        resultOffsetY: number;
+        constellationDistance: number;
+        constellationEffect: boolean;
+       -->
+
     </div>
 
   </form>
